--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -21,10 +21,12 @@ jobs:
       # Label used to access the service container
       postgres:
         # Docker Hub image
-        image: postgres
+        image: postgres@11
         # Provide the password for postgres
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: kobayashi
+          POSTGRES_DB: kobayashi_test
+          POSTGRES_PASSWORD: ""
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
@@ -47,6 +49,10 @@ jobs:
     - name: Install dependencies
       run: bundle install
     - name: Setup database
+      env:
+        RAILS_ENV: test
+        PGHOST: localhost
+        PGUSER: kobayashi
       run: bundle exec rake db:setup
     - name: Run tests
       run: bundle exec rspec
