--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
       postgres:
         image: postgres
         env:
+          POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
         options: >-
           --health-cmd pg_isready
@@ -28,9 +29,15 @@ jobs:
       with:
         bundler-cache: true
         ruby-version: 2.7.1
-    - name: Install dependencies
-      run: bundle install
     - name: Setup database
+      env:
+        POSTGRES_PASSWORD: postgres
+        POSTGRES_USER: postgres
+        RAILS_ENV: test
       run: bundle exec rake db:setup
     - name: Run tests
+      env:
+        POSTGRES_PASSWORD: postgres
+        POSTGRES_USER: postgres
+        RAILS_ENV: test
       run: bundle exec rspec
