--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,10 +34,12 @@ jobs:
         POSTGRES_PASSWORD: postgres
         POSTGRES_USER: postgres
         RAILS_ENV: test
+        POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
       run: bundle exec rake db:setup
     - name: Run tests
       env:
         POSTGRES_PASSWORD: postgres
         POSTGRES_USER: postgres
         RAILS_ENV: test
+        POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
       run: bundle exec rspec
