--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
         ports:
-          - 5432:5432
+          - 5432/tcp
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby
@@ -31,6 +31,7 @@ jobs:
         ruby-version: 2.7.1
     - name: Setup database
       env:
+        POSTGRES_HOST: localhost
         POSTGRES_PASSWORD: postgres
         POSTGRES_USER: postgres
         RAILS_ENV: test
@@ -38,6 +39,7 @@ jobs:
       run: bundle exec rake db:setup
     - name: Run tests
       env:
+        POSTGRES_HOST: localhost
         POSTGRES_PASSWORD: postgres
         POSTGRES_USER: postgres
         RAILS_ENV: test
